# blender-mcp

./: .gitignore  .http_bridge.pid  AGENTS.md  ARCHITECTURE.md  Dockerfile  GUIDE.md  LICENSE  PLAN.md  README.md  ROADMAP.md  __init__.py  __init__.py.bak  agent_host.py  blender_connection.py  blender_manifest.toml  check.ps1  check.py  config.py  global_opencode.json.example  http_bridge.py  install.ps1  install.py  install.sh  mcp_server.py  pyproject.toml  requirements.txt  server.py  start.ps1  start.sh  stop.ps1  stop.sh  tools_ambientcg.py  tools_io.py  tools_polyhaven.py  tools_printing.py  tools_render.py  tools_rigging.py  tools_scene_utils.py  tools_sketchfab.py  validate_all.py  (+3 more)
.github/workflows/: test.yml
addon/: __init__.py  _axsock.py  akb.py  akb_fetcher.py  assembly.py  assets.py  auto_config.py  auto_process.py  blender_manifest.toml  blender_socket.py  chat_types.py  config_cache.py  deferred_tool.py  platform.py  platform_utils.py  preferences.py  properties.py  rst_search.py  scanner.py  spatial.py  stdio_bridge.py  weak_sandbox.py
addon/client/: __init__.py  claude.py  ollama.py  openai.py
addon/handlers/: __init__.py  akb.py  ambientcg.py  analysis.py  animation.py  batch.py  camera.py  docs.py  geometry_nodes.py  hunyuan.py  hyper3d.py  io.py  lights.py  materials.py  modifiers.py  objects.py  polyhaven.py  printing.py  render.py  rigging.py  scene.py  scene_utils.py  shader_nodes.py  sketchfab.py  ui.py  uv_texture.py  viewport.py
addon/operators/: __init__.py  capture.py  chat.py  connect.py  download_docs.py  embedded.py  export.py  model_ops.py  setup.py
addon/panels/: __init__.py  chat.py  config.py  integrations.py
addon/server/: __init__.py  mini_http.py
addon/ui/: streaming.py
blender_mcp/: __init__.py  blender_cli.py  cli.py  logger.py  rst_search.py  telemetry.py
blender_mcp/agent/: __init__.py
blender_mcp/tools/: akb.py  ambientcg.py  (+22 more)
docs/: ADDON.md  BLENDER_MCP_RESEARCH.md  CHECK_INTEGRATION.md  COMPLETE_RESEARCH_V2.md  INSTALL.md  MODEL_SELECTOR.md  MODOS.md  TABLET_INTEGRATION.md  antigravity.md  claude-desktop.md  cursor.md  local-llm.md  opencode.md  opencode_example.json  remote.md  vscode.md  windsurf.md
generators/: __init__.py
scripts/: check.sh
skills/: README.md
tests/: __init__.py  test_e2e_socket.py  test_handlers.py  test_rst_search.py  test_server.py  test_validator.py
(+48 files in other folders)
